--- a/analysis/configs/ttbar/2017_ttbar.yaml
+++ b/analysis/configs/ttbar/2017_ttbar.yaml
@@ -130,21 +130,21 @@ histogram_config:
         - 240
         - 300
         - 500
-      label: $p_T(j)$ [GeV]
+      label: $p_T(\text{b-jets})$ [GeV]
       expression: objects['bjets'].pt
     jet_eta:
       type: Regular
       bins: 50
       start: -2.4
       stop: 2.4
-      label: $\eta(j)$
+      label: $\eta(\text{b-jets})$
       expression: objects['bjets'].eta
     jet_phi:
       type: Regular
       bins: 50
       start: -3.14159
       stop: 3.14159
-      label: $\phi(j)$
+      label: $\phi(\text{b-jets})$
       expression: objects['bjets'].phi
     met:
       type: Variable
@@ -180,7 +180,7 @@ histogram_config:
         - 300
         - 500
         - 800
-      label: $m_T(\mu, p_T^{miss}) [GeV]
+      label: $m_T(\mu, p_T^{miss})$ [GeV]
       expression: np.sqrt(2.0 * objects['muons'].pt * objects['met'].pt * (ak.ones_like(objects['met'].pt) - np.cos(objects['muons'].delta_phi(objects['met']))))
     muon_bjet_mass:
       type: Variable
@@ -194,7 +194,7 @@ histogram_config:
         - 200
         - 300
         - 500
-      label: $m(\mu, bjet) [GeV]
+      label: $m(\mu, \text{Leading b-jet})$ [GeV]
       expression: (objects['muons'] + ak.pad_none(objects['bjets'], target=2)[:, 0]).mass
     muon_met_bjet_mass:
       type: Variable
@@ -209,7 +209,7 @@ histogram_config:
         - 300
         - 500
         - 800
-      label: $m_T^{tot}(\mu, p_T^{miss}, bjet) [GeV]
+      label: $m_T^{tot}(\mu, p_T^{miss}, \text{Leading b-jet})$ [GeV]
       expression: np.sqrt((objects['muons'].pt + ak.pad_none(objects['bjets'], target=2)[:, 0].pt + objects['met'].pt) ** 2 - (objects['muons'] + ak.pad_none(objects['bjets'], target=2)[:, 0] + objects['met']).pt ** 2)
   layout:
     ttbar_met_mass:
